force-app/main/default/objects/Activity/fields/Assignee_Region__c.field-meta.xml
<CustomField>
    <fullName>Assignee_Region__c</fullName>
    <formula>TEXT (Owner:User.Region__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assignee Region</label>
    <type>Text</type>
</CustomField>