force-app/main/default/objects/Activity/fields/Blockers__c.field-meta.xml
<CustomField>
    <fullName>Blockers__c</fullName>
    <label>Blockers</label>
    <type>TextArea</type>
</CustomField>