force-app/main/default/objects/Activity/fields/Count_of_Not_Started__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Not_Started__c</fullName>
    <formula>IF (  TEXT (Status) = &quot;Not Started&quot;, 1, 0)</formula>
    <label>Count of Not Started</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>