force-app/main/default/objects/Activity/fields/Current_Status_of_Project__c.field-meta.xml
<CustomField>
    <fullName>Current_Status_of_Project__c</fullName>
    <inlineHelpText>What is the current status of this opportunity?</inlineHelpText>
    <label>Current Status of Project</label>
    <length>255</length>
    <type>Text</type>
</CustomField>