force-app/main/default/objects/Activity/fields/Customer_Burn_in_Test_Status__c.field-meta.xml
<CustomField>
    <fullName>Customer_Burn_in_Test_Status__c</fullName>
    <label>Customer Burn-in Test Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Planned</fullName>
            </value>
            <value>
                <fullName>Scheduled</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Blocked</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>