force-app/main/default/objects/Activity/fields/Customer_Plans_to_Submit_to_Top500__c.field-meta.xml
<CustomField>
    <fullName>Customer_Plans_to_Submit_to_Top500__c</fullName>
    <label>Customer Plans to Submit to Top500</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Further Discussion Needed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>