force-app/main/default/objects/Activity/fields/Customer_Presentation_Status__c.field-meta.xml
<CustomField>
    <fullName>Customer_Presentation_Status__c</fullName>
    <inlineHelpText>NOT STARTED: Preso not delivered // IN PROGRESS: Working on delivering preso // COMPLETED: Delivered the preso // BLOCKED: Something temporarily blocking you from delivering (explain below) // DISQUALIFIED: Unable to complete (explain below)</inlineHelpText>
    <label>Customer Presentation Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
                <default>true</default>
                <label>Not Started</label>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Blocked</fullName>
            </value>
            <value>
                <fullName>Disqualified</fullName>
            </value>
            <value>
                <fullName>Deferred</fullName>
                <isActive>false</isActive>
                <label>Deferred</label>
            </value>
            <value>
                <fullName>Waiting on someone else</fullName>
                <isActive>false</isActive>
                <label>Waiting on someone else</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>