force-app/main/default/objects/Activity/fields/Demo__c.field-meta.xml
<CustomField>
    <fullName>Demo__c</fullName>
    <label>Demo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
                <default>true</default>
                <label>Not Started</label>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Blocked</fullName>
            </value>
            <value>
                <fullName>Disqualified</fullName>
            </value>
            <value>
                <fullName>Deferred</fullName>
                <isActive>false</isActive>
                <label>Deferred</label>
            </value>
            <value>
                <fullName>Waiting on someone else</fullName>
                <isActive>false</isActive>
                <label>Waiting on someone else</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>