force-app/main/default/objects/Activity/fields/DGX_SuperPOD_Resources__c.field-meta.xml
<CustomField>
    <fullName>DGX_SuperPOD_Resources__c</fullName>
    <label>DGX SuperPOD Resources</label>
    <type>TextArea</type>
</CustomField>