force-app/main/default/objects/Activity/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>Title Management</description>
    <label>Email</label>
    <type>Email</type>
</CustomField>