force-app/main/default/objects/Activity/fields/Expected_HPL_Run_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_HPL_Run_Date__c</fullName>
    <label>Expected HPL Run Date</label>
    <type>Date</type>
</CustomField>