force-app/main/default/objects/Activity/fields/Feedback__c.field-meta.xml
<CustomField>
    <fullName>Feedback__c</fullName>
    <label>Feedback</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Competitive</fullName>
            </value>
            <value>
                <fullName>Sales Inhibitors</fullName>
            </value>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Immediate Action Item</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>