force-app/main/default/objects/Activity/fields/Help_Needed_from_Sales_Leadership__c.field-meta.xml
<CustomField>
    <fullName>Help_Needed_from_Sales_Leadership__c</fullName>
    <inlineHelpText>What help is needed from sales leadership to help close this deal?</inlineHelpText>
    <label>Help Needed from Sales Leadership</label>
    <length>255</length>
    <type>Text</type>
</CustomField>