force-app/main/default/objects/Activity/fields/HPL_Discussed_with_Customer__c.field-meta.xml
<CustomField>
    <fullName>HPL_Discussed_with_Customer__c</fullName>
    <label>HPL Discussed with Customer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Pitched</fullName>
            </value>
            <value>
                <fullName>Planned</fullName>
            </value>
            <value>
                <fullName>Pitched</fullName>
            </value>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>Blocked</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>