force-app/main/default/objects/Activity/fields/HPL_Final_Score_RMAX__c.field-meta.xml
<CustomField>
    <fullName>HPL_Final_Score_RMAX__c</fullName>
    <label>HPL Final Score (RMAX)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>