force-app/main/default/objects/Activity/fields/Industry_from_Account__c.field-meta.xml
<CustomField>
    <fullName>Industry_from_Account__c</fullName>
    <formula>TEXT(Account__r.Industry)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Industry (from Account)</label>
    <type>Text</type>
</CustomField>