force-app/main/default/objects/Activity/fields/ISV__c.field-meta.xml
<CustomField>
    <fullName>ISV__c</fullName>
    <label>ISV</label>
    <type>TextArea</type>
</CustomField>