force-app/main/default/objects/Activity/fields/Key_Attendees_Presented_To__c.field-meta.xml
<CustomField>
    <fullName>Key_Attendees_Presented_To__c</fullName>
    <label>Key Attendees Presented To</label>
    <length>150</length>
    <type>Text</type>
</CustomField>