force-app/main/default/objects/Activity/fields/Legacy_SE_Clone_Source_Task_Id__c.field-meta.xml
<CustomField>
    <fullName>Legacy_SE_Clone_Source_Task_Id__c</fullName>
    <description>This field has Original Task Id from which this Task is Cloned.</description>
    <label>Legacy_SE_Clone_Source_Task_Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>