force-app/main/default/objects/Activity/fields/LHA__c.field-meta.xml
<CustomField>
    <fullName>LHA__c</fullName>
    <label>LHA Program</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EGX</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>