force-app/main/default/objects/Activity/fields/LHA_Task_Type__c.field-meta.xml
<CustomField>
    <fullName>LHA_Task_Type__c</fullName>
    <label>LHA Task Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EGX Company Lead (No contact yet)</fullName>
            </value>
            <value>
                <fullName>EGX Meeting/Call</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>