force-app/main/default/objects/Activity/fields/Link_to_Customer_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Link_to_Customer_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Link the Opportunity that may have been generated as an outcome of this task</inlineHelpText>
    <label>Link to Customer Opportunity Generated</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>