force-app/main/default/objects/Activity/fields/Link_to_More_Details__c.field-meta.xml
<CustomField>
    <fullName>Link_to_More_Details__c</fullName>
    <description>This is a URL to more details</description>
    <inlineHelpText>This is a URL to more details</inlineHelpText>
    <label>Link to More Details</label>
    <type>Url</type>
</CustomField>