force-app/main/default/objects/Activity/fields/Mass_Email__c.field-meta.xml
<CustomField>
    <fullName>Mass_Email__c</fullName>
    <label>Mass Email</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>checking status</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>