force-app/main/default/objects/Activity/fields/Next_Decision_Point_Sales_Milestone__c.field-meta.xml
<CustomField>
    <fullName>Next_Decision_Point_Sales_Milestone__c</fullName>
    <inlineHelpText>What is the next decision point or sales milestone for this opportunity?</inlineHelpText>
    <label>Next Decision Point/Sales Milestone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>