force-app/main/default/objects/Activity/fields/Next_Decision_Sales_Milestone_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Decision_Sales_Milestone_Date__c</fullName>
    <inlineHelpText>What is the date of the next decision point or sales milestone?</inlineHelpText>
    <label>Next Decision/Sales Milestone Date</label>
    <type>Date</type>
</CustomField>