force-app/main/default/objects/Activity/fields/Next_Steps_Comments__c.field-meta.xml
<CustomField>
    <fullName>Next_Steps_Comments__c</fullName>
    <label>Next Steps/Comments</label>
    <type>TextArea</type>
</CustomField>