force-app/main/default/objects/Activity/fields/PIC__c.field-meta.xml
<CustomField>
    <fullName>PIC__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Pilot in Command</description>
    <inlineHelpText>Pilot in Command</inlineHelpText>
    <label>PIC</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>