force-app/main/default/objects/Activity/fields/Sales_Play__c.field-meta.xml
<CustomField>
    <fullName>Sales_Play__c</fullName>
    <label>Sales Play</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Installed Base Upgrade to Volta - FY20</fullName>
            </value>
            <value>
                <fullName>AI/DL for Insurance</fullName>
                <isActive>false</isActive>
                <label>AI/DL for Insurance</label>
            </value>
            <value>
                <fullName>AI/DL for Medical Imaging</fullName>
                <isActive>false</isActive>
                <label>AI/DL for Medical Imaging</label>
            </value>
            <value>
                <fullName>AI/DL for Pharma</fullName>
                <isActive>false</isActive>
                <label>AI/DL for Pharma</label>
            </value>
            <value>
                <fullName>Cryo-electron Microscopy (Cryo-EM)</fullName>
                <isActive>false</isActive>
                <label>Cryo-electron Microscopy (Cryo-EM)</label>
            </value>
            <value>
                <fullName>DGXpand</fullName>
                <isActive>false</isActive>
                <label>DGXpand</label>
            </value>
            <value>
                <fullName>Installed Base Upgrade to Volta</fullName>
                <isActive>false</isActive>
                <label>Installed Base Upgrade to Volta</label>
            </value>
            <value>
                <fullName>Molecular Dynamics and Quantum Chemistry (MD/QC)</fullName>
                <isActive>false</isActive>
                <label>Molecular Dynamics and Quantum Chemistry (MD/QC)</label>
            </value>
            <value>
                <fullName>Oil and Gas - Predictive Maintenance</fullName>
                <isActive>false</isActive>
                <label>Oil and Gas - Predictive Maintenance</label>
            </value>
            <value>
                <fullName>Placeholder #4</fullName>
                <isActive>false</isActive>
                <label>Placeholder #4</label>
            </value>
            <value>
                <fullName>Sales Play #1</fullName>
                <isActive>false</isActive>
                <label>Sales Play #1</label>
            </value>
            <value>
                <fullName>Sales Play #2</fullName>
                <isActive>false</isActive>
                <label>Sales Play #2</label>
            </value>
            <value>
                <fullName>Sales Play #3</fullName>
                <isActive>false</isActive>
                <label>Sales Play #3</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>