force-app/main/default/objects/Activity/fields/Sales_Play_Resources__c.field-meta.xml
<CustomField>
    <fullName>Sales_Play_Resources__c</fullName>
    <label>Sales Play Resources</label>
    <type>TextArea</type>
</CustomField>