force-app/main/default/objects/Activity/fields/SI_OEM_Partner__c.field-meta.xml
<CustomField>
    <fullName>SI_OEM_Partner__c</fullName>
    <label>SI/OEM/Partner</label>
    <type>TextArea</type>
</CustomField>