force-app/main/default/objects/Activity/fields/Solution_Architect__c.field-meta.xml
<CustomField>
    <fullName>Solution_Architect__c</fullName>
    <label>Solution Architect</label>
    <type>TextArea</type>
</CustomField>