force-app/main/default/objects/Activity/fields/Tech_Engagement_COMPLETED__c.field-meta.xml
<CustomField>
    <fullName>Tech_Engagement_COMPLETED__c</fullName>
    <label>Tech Engagement COMPLETED</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DLI</fullName>
            </value>
            <value>
                <fullName>PS Assessment</fullName>
            </value>
            <value>
                <fullName>Workshop</fullName>
            </value>
            <value>
                <fullName>Volta ACCELERATE Seed Units</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>