force-app/main/default/objects/Activity/fields/Testimonial_Logo_Use__c.field-meta.xml
<CustomField>
    <fullName>Testimonial_Logo_Use__c</fullName>
    <label>Testimonial/Logo Use</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
                <default>true</default>
                <label>Not Started</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Working</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>