force-app/main/default/objects/Activity/fields/Topics_Discussed__c.field-meta.xml
<CustomField>
    <fullName>Topics_Discussed__c</fullName>
    <label>Topics Discussed</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Autodesk Reseller / PSP-E-store</fullName>
            </value>
            <value>
                <fullName>System Builder / BFP-Built for Professionals</fullName>
            </value>
            <value>
                <fullName>ATC – Autodesk Training Center</fullName>
            </value>
            <value>
                <fullName>System Builder / SolidWorks</fullName>
            </value>
            <value>
                <fullName>System Builder / Adobe</fullName>
            </value>
            <value>
                <fullName>System Builder / AutoCAD</fullName>
            </value>
            <value>
                <fullName>System Builder / 3DSMax</fullName>
            </value>
            <value>
                <fullName>System Builder / Bunkspeed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>