force-app/main/default/objects/Activity/fields/Training_Topics__c.field-meta.xml
<CustomField>
    <fullName>Training_Topics__c</fullName>
    <label>Training Topics</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Accelarated Computing</fullName>
            </value>
            <value>
                <fullName>Cloud/Virtualization</fullName>
            </value>
            <value>
                <fullName>DVP Training</fullName>
            </value>
            <value>
                <fullName>Gaming/Consumer</fullName>
            </value>
            <value>
                <fullName>GPU Genius Training</fullName>
            </value>
            <value>
                <fullName>Pro Visualization</fullName>
            </value>
            <value>
                <fullName>Sales Training</fullName>
            </value>
            <value>
                <fullName>Tegra/Embedded</fullName>
            </value>
            <value>
                <fullName>VCA Training</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>