force-app/main/default/objects/Activity/fields/Use_Case__c.field-meta.xml
<CustomField>
    <fullName>Use_Case__c</fullName>
    <label>Use Case</label>
    <length>255</length>
    <type>Text</type>
</CustomField>