force-app/main/default/objects/Activity/fields/Was_DGX_SuperPOD_Presented_to_Customer__c.field-meta.xml
<CustomField>
    <fullName>Was_DGX_SuperPOD_Presented_to_Customer__c</fullName>
    <label>Was DGX SuperPOD Presented to Customer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>