force-app/main/default/objects/Activity/fields/Why_no_plans_to_submit__c.field-meta.xml
<CustomField>
    <fullName>Why_no_plans_to_submit__c</fullName>
    <label>Why No Plans to Submit?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer Privacy Concerns</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>