force-app/main/default/objects/Activity/listViews/My_Open_Activities.listView-meta.xml
<ListView>
    <fullName>My_Open_Activities</fullName>
    <columns>TASK.SUBJECT</columns>
    <columns>TASK.WHO_NAME</columns>
    <columns>TASK.WHAT_NAME</columns>
    <columns>TASK.DUE_DATE</columns>
    <columns>TASK.STATUS</columns>
    <columns>TASK.PRIORITY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Customer_Presentation_Status__c</columns>
    <columns>Demo__c</columns>
    <columns>Create_Opportunity__c</columns>
    <columns>Sales_Play__c</columns>
    <columns>TASK.LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>TASK.CLOSED</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>My Open Activities</label>
    <language>en_US</language>
</ListView>