force-app/main/default/objects/Activity/listViews/My_Open_Sales_Play_Tasks.listView-meta.xml
<ListView>
    <fullName>My_Open_Sales_Play_Tasks</fullName>
    <columns>TASK.SUBJECT</columns>
    <columns>TASK.WHAT_NAME</columns>
    <columns>TASK.DUE_DATE</columns>
    <columns>TASK.STATUS</columns>
    <columns>CORE.USERS.FULL_NAME</columns>
    <columns>Customer_Presentation_Status__c</columns>
    <columns>Demo__c</columns>
    <columns>Create_Opportunity__c</columns>
    <columns>Link_to_Customer_Opportunity__c</columns>
    <columns>Sales_Play__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>TASK.CLOSED</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>TASK.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Task.Fed_DGX_A100_Outreach</value>
    </filters>
    <label>My Open Sales Play Tasks</label>
    <language>en_US</language>
</ListView>